--- a/package.json
+++ b/package.json
@@ -1,7 +1,16 @@
 {
   "name": "@hookfang/email-verifier",
-  "version": "1.0.1",
-  "description": "",
+  "version": "1.0.2",
+  "description": "Email Sytanx Validation",
+  "keywords": [
+    "Email Verifier",
+    "email",
+    "Javascript",
+    "validator",
+    "validation",
+    "Syntax Check",
+    "Domain Check"
+  ],
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
